[package]
name = "veccell"
version = "0.2.0"
edition = "2021"
authors = [ "Shad Amethyst <adrien.burgun@orange.fr>" ]
description = "Provides VecCell, a variant of Vec with interior mutability."
repository = "https://github.com/adri326/veccell/"
license = "MIT OR Apache-2.0"
keywords = ["vec", "refcell", "interior-mutability"]
categories = ["rust-patterns"]

[dependencies]
